--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -136,8 +136,7 @@
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="30dp"
                 android:max="@{playControl.durationInt}"
-                android:progress="@{playControl.currentPositionInt}"
-                />
+                android:progress="@{playControl.currentPositionInt}" />
 
             <LinearLayout
                 android:id="@+id/timers"
