Fixed status bar color and status bar icon contrasting color

--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -74,7 +74,8 @@
                 android:layout_height="wrap_content"
                 android:weightSum="1"
                 android:orientation="horizontal"
-                android:onClick="@{(v)->clickHandler.onClick(v, 0)}">
+                android:onClick="@{(v)->clickHandler.onClick(v, 0)}"
+                app:visibility="@{!playControl.currentSong.empty}">
 
                 <LinearLayout
                     android:id="@+id/profile_picture_clipper"
