Debugged and fixed data-binding errors

--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -25,7 +25,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center"
-            android:visibility="@{isError &amp;&amp; !isLoading}"
+            app:visibility="@{isError &amp;&amp; !isLoading}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
             android:id="@+id/progress_bar"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:visibility="@{!isError &amp;&amp; isLoading}"
+            app:visibility="@{!isError &amp;&amp; isLoading}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +63,7 @@
             android:id="@+id/albums_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:visibility="@{!isError &amp;&amp; !isLoading}"
+            app:visibility="@{!isError &amp;&amp; !isLoading}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
